--- a/tailwind_lab/package.json
+++ b/tailwind_lab/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.4.13"
+  },
+  "scripts": {
+    "dev": "npx tailwindcss -i ./static/src/input.css -o ./static/src/output.css --watch"
   }
 }
